2week/Kakao-Backend-Second-DTO-main/src/main/java/com/example/kakaoshop/global/error/CustomException.java
package com.example.kakaoshop.global.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;
}